Gif pointer event and z-index fix

--- a/css/game.css
+++ b/css/game.css
@@ -143,12 +143,12 @@ a {
 
 .result {
   width: 100%;
-  height: 95vh;
-  background-color: #000d1b;
-  margin: 1rem;
+  height: 100vh;
+  background-color: #000d1b75;
+  /* margin: 1rem; */
   padding: 1rem;
-  border: 2px solid var(--danger-color);
-  border-radius: 25px;
+  /* border: 2px solid var(--danger-color); */
+  /* border-radius: 25px; */
   z-index: 100;
 
   display: grid;
@@ -184,6 +184,12 @@ a {
 .result__img {
   width: 20rem;
   height: 20rem;
+}
+
+.result__pb,
+.result__high-score {
+  pointer-events: none;
+  z-index: -2;
 }
 
 .result__stars {
